# test-c

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
api/: mylib.h
bindings/rust/mylib/: Cargo.toml
bindings/rust/mylib-sys/: Cargo.toml  Makefile  README  build.rs  nix_bindgen.sh
bindings/rust/mylib-sys/src/: ffi.rs  lib.rs
bindings/rust/mylib/src/: lib.rs
include/: mylib.h
src/: list.c  list.h  main.c
